pypet 0.1b.2

*   Comments are no longer limited in size

*   New Brian Result

*   Storage Service in case of purging now sets the comment to the result with the lowest index,
    in case of multiprocessing.

*   Old API names are kept, but emit a depricated warning.

*   The exploration array is now termed range. Accordingly, the function `f_is_array` is
    renamed `f_has_range` and `f_get_array` renamed to `f_get_range`.

*   v_leaf renamed to v_is_leaf

*   f_is_root renamed to v_is_root and changed to property

*   v_fast_accessible renamed to f_supports_fast_access and changed to function

*   v_parameter changed to v_is_parameter

pypet 0.1b.1

*   Support for `long` types

*   Documentation for the `f_find_idx` function

*   The parameters `trajectory_name` and `trajectory_index` in f_load have been renamed to
    `name` and `index`

pypet 0.1b.0

*   Group nodes support __getitem__

*   SparseResult

*   If you merge trajectory, all environment settings of both are kept.

*   More information about the environment is added to the trajectory

*   BUG FIX:

    Recall of trajectory comments from diks yielded numpy strings instead of python strings
    This could cause trouble if the comment is empty!

*   Git Integration, you can now make autocommits for every experiment

*   New Sparse Parameter, for scipy sparse matrices

*   BUG FIX: Loading of Trajectory metadata, now v_time is loaded correctly

*   BUG FIX: Expand no longer repeats already run experiments

*   More fine grain overview tables

*   Comments for runs are only added once and not every run

*   The overview tables are now found in the group `overview`

*   Test are operating in a temp directory

*   Now you can have fast access with result if they contain only a single entry with the name of
    the result

*   New trajectory function `f_as_run` that makes the trajectory belief it is a particular
    single run and results and derived parameters of other runs are blinded out.

pypet 0.1a.6
