@@ -1,10 +1,15 @@
+from collections import Sequence, Mapping, Set
+import numpy as np
+import pandas as pd
+from pypet import pypetconstants
+
 __author__ = 'Robert Meyer'
 
 
 
 import pypet.parameter
 import itertools as it
-from pypet.utils.helpful_functions import nested_equal
+
 
 def results_equal(a,b):
     ''' Compares two result objects
@@ -74,3 +79,55 @@ def parameters_equal(a,b):
                 return False
 
     return True
+
+
+def nested_equal(a, b):
+    """
+    Compare two objects recursively by element, handling numpy objects.
+
+    Assumes hashable items are not mutable in a way that affects equality.
+    """
+
+    # for types that support __eq__
+    if hasattr(a,'__eq__'):
+        try:
+            custom_eq= a == b
+            if isinstance(custom_eq,bool):
+                return custom_eq
+        except ValueError:
+            pass
+
+
+
+    #Check equality according to type type [sic].
+    if a is None:
+        return b is None
+    if isinstance(a, basestring):
+         return a == b
+    if isinstance(a, pypetconstants.PARAMETER_SUPPORTED_DATA):
+        return a==b
+    if isinstance(a, np.ndarray):
+        return np.all(a==b)
+    if isinstance(a, pd.DataFrame):
+        new_frame = a == b
+        new_frame = new_frame |( pd.isnull(a) & pd.isnull(b))
+        return np.all(new_frame.as_matrix())
+    if isinstance(a, Sequence):
+        return all(nested_equal(x, y) for x, y in zip(a, b))
+    if isinstance(a, Mapping):
+        if set(a.keys()) != set(b.keys()):
+            return False
+        return all(nested_equal(a[k], b[k]) for k in a.keys())
+    if isinstance(a, Set):
+         return a == b
+
+    if hasattr(a,'__dict__'):
+        if not hasattr(b,'__dict__'):
+            return False
+
+        if set(a.__dict__.keys()) != set(b.__dict__.keys()):
+            return False
+
+        return all(nested_equal(a.__dict__[k], b.__dict__[k]) for k in a.__dict__.keys())
+
+    return id(a) == id(b)
